[package]
name = "codemp-nvim"
version = "0.3.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
mlua = { version = "0.9.0", features = ["module", "luajit"] }
codemp = { git = "ssh://git@github.com/codewithotherpeopleandchangenamelater/codemp.git", rev = "5cc0bd3a869d83f7decc8ce1185eebb38771621a", features = ["global", "sync"] }
thiserror = "1.0.47"
derive_more = "0.99.17"
tracing-subscriber = "0.3.17"
tracing = "0.1.37"
lazy_static = "1.4.0"
tokio = { version = "1.35.1", features = ["rt"] }
